# FTCircuitBench

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  FTCircuitBench_Pipeline_Demo.ipynb  LICENSE  README.md  analyze_circuit.ipynb  analyze_circuit.py  generate_benchmarks.ipynb  generate_benchmarks.py  pyproject.toml
.github/workflows/: ci.yml
bench/: bench_layering.ipynb  bench_layering.py  compare.ipynb  compare.py
bench/results/: baseline.json  change1.json  change2.json  change2b.json
circuit_outputs/: adder_10q_gs_clifford_t.qasm  adder_10q_gs_pbc_post_opt_tlayers.txt  adder_10q_gs_pbc_pre_opt_measure_basis.txt  adder_10q_gs_pbc_pre_opt_tlayers.txt  qft_4q_gs_clifford_t.qasm
circuit_stats_output/: fermi_hubbard_2d_triangular_18q_sk_rec1_stats.json  hhl_12q_gs_prec5_stats.json  hhl_4q_gs_prec5_stats.json  hhl_4q_sk_rec1_stats.json  hhl_7q_gs_prec5_stats.json  hhl_7q_sk_rec1_stats.json  hhl_7q_sk_rec3_stats.json  ising_1d_9q_gs_prec5_stats.json  ising_1d_9q_sk_rec1_stats.json  ising_1d_9q_sk_rec2_stats.json  ising_2d_9q_gs_prec3_stats.json  ising_2d_9q_sk_rec1_stats.json  ising_2d_9q_sk_rec2_stats.json  ising_2d_9q_sk_rec3_stats.json  qft_18q_gs_prec5_stats.json  qft_18q_sk_rec1_stats.json  qft_18q_sk_rec2_stats.json  qft_18q_sk_rec3_stats.json  qft_18q_sk_rec4_stats.json  qft_29q_gs_prec5_stats.json  qft_29q_sk_rec3_stats.json  qft_29q_sk_rec4_stats.json  qft_4q_gs_prec5_stats.json  qft_4q_sk_rec1_stats.json  qft_4q_sk_rec3_stats.json
docs/: api.md  examples.md  index.md  installation.md
ftcircuitbench/: __init__.ipynb  __init__.py  api.ipynb  api.py  benchmark_utils.ipynb  benchmark_utils.py  fidelity.ipynb  fidelity.py  py.typed
ftcircuitbench/analyzer/: __init__.ipynb  __init__.py  clifford_t_analyzer.ipynb  clifford_t_analyzer.py  pbc_analyzer.ipynb  pbc_analyzer.py  visualization.ipynb  visualization.py
ftcircuitbench/decomposer/: __init__.ipynb  __init__.py  decomposer.ipynb  decomposer.py
ftcircuitbench/parser/: __init__.ipynb  __init__.py  qasm_parser.ipynb  qasm_parser.py
ftcircuitbench/pbc_converter/: __init__.ipynb  __init__.py  nwqec_adapter.ipynb  nwqec_adapter.py  pbc_circuit_reader.ipynb  pbc_circuit_reader.py  pbc_circuit_saver.ipynb  pbc_circuit_saver.py  pbc_generator.ipynb  pbc_generator.py  pbm.ipynb  pbm.py  r_pauli_circ.ipynb  r_pauli_circ.py  tab_gate.ipynb  tab_gate.py
ftcircuitbench/reports/: summary_markdown.ipynb  summary_markdown.py
qasm/adder/: adder_64q.qasm
tests/: _pbc_helpers.ipynb  _pbc_helpers.py  conftest.ipynb  conftest.py  test_api_pipeline.ipynb  test_api_pipeline.py  test_circuit_data_structure.ipynb  test_circuit_data_structure.py  test_corrected_transpilers.ipynb  test_corrected_transpilers.py  test_fidelity.ipynb  test_fidelity.py  test_fidelity_behavior.ipynb  test_fidelity_behavior.py  test_interaction_graphs.ipynb  test_interaction_graphs.py  test_layering_invariants.ipynb  test_layering_invariants.py  test_layering_is_commute.ipynb  test_layering_is_commute.py  test_layering_methods_equivalence.ipynb  test_layering_methods_equivalence.py  test_layering_regression.ipynb  test_layering_regression.py  test_nwqec_ct.ipynb  test_nwqec_ct.py  test_nwqec_default_path.ipynb  test_nwqec_default_path.py  test_pbc_extended_basis.ipynb  test_pbc_extended_basis.py  test_performance_summary.ipynb  test_performance_summary.py  test_pipeline_parity.ipynb  test_pipeline_parity.py  test_qasm_parser.ipynb  test_qasm_parser.py  test_qubit_pbc_operations_plot.ipynb  test_qubit_pbc_operations_plot.py  test_sk_transpiler.ipynb  test_sk_transpiler.py  (+2 more)
(+79 files in other folders)
